# 3D_Cube_Visualizer

./: CMakeLists.txt
shaders/: fragment_shader.glsl
src/: camera.cpp  camera.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h
src/glad/: glad.c
src/glad/include/glad/: glad.h
